<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".accelerometer">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/accelerometer_data"
        android:layout_marginVertical="60sp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acc_x_tv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/x"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/acc_y_tv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="47dp"
        android:text="@string/y"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/acc_z_tv"
        app:layout_constraintStart_toEndOf="@+id/acc_x_tv"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/acc_z_tv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="63dp"
        android:text="@string/z"
        android:layout_marginLeft="50dp"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/acc_y_tv"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</LinearLayout>